Fix player slider alignment issue.

--- a/app/styles/components/_Footer.scss
+++ b/app/styles/components/_Footer.scss
@@ -77,22 +77,27 @@ footer {
     //AUDIO PLAYER
     .audio {
       display: flex;
-      clear: right;
       opacity: 0;
-      transition: $trans-time * 2;
       width: 100%;
+      height: 45px;
       margin-top: 25px;
       margin-left: -10px;
+      transition: $trans-time * 2;
 
       #play-icon {
+        width: 45px;
+        height: 100%;
         opacity: 0.65;
         cursor: pointer;
       }
       #playback-slider {
         width: 63%;
+        height: 100%;
+        vertical-align: middle;
+        margin-left: -2px;
       }
       #time {
-        margin: 16px 10px;
+        margin: 15px 2px;
         font-size: 1rem;
         font-weight: 500;
         opacity: 0.5;
@@ -100,11 +105,12 @@ footer {
       #volume-icon {
         width: 30px;
         height: 30px;
-        margin: 10px 2px;
+        margin: 8px -2px 9px 18px;
         opacity: 0.5;
       }
       #volume-slider {
         width: 10%;
+        height: 100%;
       }
     }
   }
